[package]
name = "drawing-stuff"
description = "A library for drawing onto a canvas"
authors = ["Jonathan Kappler <kapplerjonathan5@gmail.com>"]
repository = "https://github.com/jon5th5n/drawing-stuff"
keywords = ["drawing", "canvas", "color"]
license = "MIT"
version = "0.2.1"
edition = "2021"

[dependencies]
